--- a/admin/package.json
+++ b/admin/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --port 8080",
     "build": "next build",
+    "build2": "next build && node post-build.js",
     "start": "next start",
     "lint": "next lint"
   },
